--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Set output variables
         id: vars
         run: |
-          echo ::set-output name=pr_title::"[Auto] Add changes at $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
-          echo ::set-output name=pr_body::"This PR was auto-generated on $(date '+on %Y/%m/%d at %H:%M:%S %Z') \
+          echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
+          echo ::set-output name=pr_body::"This PR was auto-generated $(date '+on %Y/%m/%d at %H:%M:%S %Z') \
             by [create-pull-request](https://github.com/peter-evans/create-pull-request)."
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
@@ -32,5 +32,3 @@ jobs:
         uses: "pascalgn/automerge-action@v0.12.0"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_METHOD: "squash"
-          MERGE_COMMIT_MESSAGE: "pull-request-description"
