--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -21,7 +21,7 @@ jobs:
           echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
           for message in $(git log --pretty=format:"%h %s" --graph origin/stage origin/develop)
             do
-            echo ::set-output name=pr_body::"${{ steps.vars.outputs.pr_body }}\$(git log --pretty=format:"%h %s" --graph origin/stage origin/develop)"
+            echo ::set-output name=pr_body::"${{ steps.vars.outputs.pr_body }}\$(message)"
             done
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
