--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -19,10 +19,12 @@ jobs:
         id: vars
         run: |
           echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
+          OUTPUT=""
           for message in $(git log --pretty=format:"%h %s" --graph origin/stage origin/develop)
             do
-            echo ::set-output name=pr_body::"${{ steps.vars.outputs.pr_body }}\$(message)"
+            OUTPUT+= "${message}"
             done
+          echo ::set-output name=pr_body::"$(OUTPUT)"
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
