--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -19,7 +19,7 @@ jobs:
         id: vars
         run: |
           echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
-          echo ::set-output name=pr_body::"$(git log origin/stage..origin/develop --oneline --no-merges)"
+          echo ::set-output name=pr_body::"$(git log)"
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
