--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -13,6 +13,10 @@ jobs:
           ref: stage
       - name: Reset promotion branch
         run: |
+          body=$(git log | cat pr-body.txt)
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}"
           git fetch origin develop:develop
           git reset --hard develop
       - name: Set output variables
