--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -13,17 +13,17 @@ jobs:
           ref: stage
       - name: Reset promotion branch
         run: |
-          body=$(git log | cat pr-body.txt)
-          body="${body//'%'/'%25'}"
-          body="${body//$'\n'/'%0A'}"
-          body="${body//$'\r'/'%0D'}"
           git fetch origin develop:develop
           git reset --hard develop
       - name: Set output variables
         id: vars
         run: |
+          body=$(git log | cat pr-body.txt)
+          body="${body//'%'/'%25'}"
+          body="${body//$'\n'/'%0A'}"
+          body="${body//$'\r'/'%0D'}"
           echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
-          echo ::set-output name=pr_body::"$(git log)"
+          echo ::set-output name=pr_body::$body
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
