--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Set output variables
         id: vars
         run: |
-          body=$(git log | cat pr-body.txt)
+          git log >> ./pr-body.txt
+          body=$(cat pr-body.txt)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
