--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -19,7 +19,7 @@ jobs:
         id: vars
         run: |
           sudo apt-get install git-extras
-          body=$(git commits-since yesterday)
+          body=$(git show-tree)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
