--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Reset promotion branch
         run: |
           git fetch origin develop:develop
+          git reset --hard develop
       - name: Set output variables
         id: vars
         run: |
@@ -35,3 +36,4 @@ jobs:
         uses: "pascalgn/automerge-action@v0.12.0"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_COMMIT_MESSAGE: "pull-request-description"
