--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set output variables
         id: vars
         run: |
-          body=$(git log origin/stage..origin/develop --oneline)
+          body=$(git log stage..develop)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
