--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -10,10 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: stage
-      - name: Reset develop branch
-        run: |
-          git fetch
+          ref: origin/stage
       - name: Set output variables
         id: vars
         run: |
@@ -26,7 +23,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: develop
+          branch: origin/develop
           labels: automerge
           title: ${{ steps.vars.outputs.pr_title }}
           body: ${{ steps.vars.outputs.pr_body }}
