--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,13 +16,12 @@ jobs:
           ref: stage
       - name: Reset develop branch
         run: |
-          git fetch origin stage:stage
           git fetch origin develop:develop
           git reset --hard develop
       - name: Set output variables
         id: vars
         run: |
-          body=$(git log stage..develop --oneline)
+          body=$(git log origin/stage..develop --oneline)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
