--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,7 +28,7 @@ jobs:
           echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
           echo ::set-output name=pr_body::$body
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+        uses: "peter-evans/create-pull-request@v3.10.1"
         with:
           branch: develop
           labels: automerge
