--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set output variables
         id: vars
         run: |
-          body=$(git log origin/stage..develop --oneline)
+          body=$(git log origin/stage..origin/develop --oneline)
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
