--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,14 +28,14 @@ jobs:
           echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
           echo ::set-output name=pr_body::$body
       - name: Create Pull Request
-        uses: "peter-evans/create-pull-request@v3.10.1"
+        uses: peter-evans/create-pull-request@v3
         with:
           branch: develop
           labels: automerge
           title: ${{ steps.vars.outputs.pr_title }}
           body: ${{ steps.vars.outputs.pr_body }}
       - name: automerge
-        uses: "pascalgn/automerge-action@v0.14.3"
+        uses: "pascalgn/automerge-action@v0.12.0"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_COMMIT_MESSAGE: "pull-request-description"
