--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -2,7 +2,17 @@ name: develop-stage-promote-2
 
 on:
   schedule:
-    - cron: "0/2 * * * *"
+    - cron: "0/10 * * * *"
+  workflow_dispatch:
+    # Inputs the workflow accepts.
+    inputs:
+      name:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: 'Person to greet'
+        # Default value if no value is explicitly provided
+        default: 'World'
+        # Input has to be provided for the workflow to run
+        required: true
 
 jobs:
   stagePromotion:
