--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -7,39 +7,21 @@ name: Manual workflow
 on:
   workflow_dispatch:
 
+
 jobs:
-  stagePromotion:
+  pull-request:
+    name: Open PR to main
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: stage
-      - name: Reset develop branch
-        run: |
-          git fetch origin develop:develop
-          git reset --hard develop
-      - name: Set output variables
-        id: vars
-        run: |
-          body=$(git log origin/stage..origin/develop --oneline)
-          body="${body//'%'/'%25'}"
-          body="${body//$'\n'/'%0A'}"
-          body="${body//$'\r'/'%0D'}"
-          echo ::set-output name=pr_title::"[Auto] Add changes $(date '+on %Y/%m/%d at %H:%M:%S %Z')"
-          echo ::set-output name=pr_body::$body
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          branch: develop
-          labels: automerge
-          title: ${{ steps.vars.outputs.pr_title }}
-          body: ${{ steps.vars.outputs.pr_body }}
-      - name: Sleep for 30 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '30s'
-      - name: automerge
-        uses: "pascalgn/automerge-action@v0.12.0"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_COMMIT_MESSAGE: "pull-request-description"
+    - uses: actions/checkout@v2
+      name: checkout
+
+    - uses: repo-sync/pull-request@v2
+      name: pull-request
+      with:
+        source_branch: "develop"
+        destination_branch: "stage"
+        pr_title: "Pulling ${{ github.ref }} into main"
+        pr_body: "👑 *An automated PR*"
+        pr_label: "automerge"
+        github_token: ${{ secrets.GITHUB_TOKEN }}
