--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,4 +24,4 @@ jobs:
         pr_title: "Pulling ${{ github.ref }} into main"
         pr_body: "👑 *An automated PR*"
         pr_label: "automerge"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PAT }}
