--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,4 +28,4 @@ jobs:
     - name: automerge
       uses: "pascalgn/automerge-action@v0.12.0"
       env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        GITHUB_TOKEN: "${{ secrets.PAT }}"
